2004-09-24  Roland Illig  <roland.illig@gmx.de>

	* cpio.c: Replaced NULL with (char *) NULL. Likewise for 0, where
	NULL was meant.
	* direntry.c: Likewise.
	* extfs.c: Likewise.
	* fish.c: Likewise.
	* ftpfs.c: Likewise.
	* mcfs.c: Likewise.
	* tar.c: Likewise.
	* undelfs.c: Likewise.
	* vfs.c: Likewise.

2004-09-23  Roland Illig  <roland.illig@gmx.de>

	* cpio.c (cpio_read_bin_head): Replaced GUINT16_SWAP_LE_BE with
	GUINT16_SWAP_LE_BE_CONSTANT, because GCC-3.3 emitted a warning about
	__asm__ __const__.

2004-09-22  Roland Illig  <roland.illig@gmx.de>

	* direntry.c (vfs_s_new_entry): see 2004-09-19. Additionally followed the advice
	concerning g_strdup in /HACKING.
	(vfs_s_generate_entry): Likewise.
	(vfs_s_find_entry_linear): Likewise.
	(vfs_s_find_inode): Likewise.
	* xdirentry.h: Likewise.

2004-09-22  Pavel S. Shirshov  <pavelsh@mail.ru>

	* direnty.c (vfs_s_new_entry): Revert last changes.
	(vfs_s_generate_entry): Likewise.
	(vfs_s_find_entry_linear): Likewise.
	(vfs_s_find_inode): Likewise.
	* xdirentry.h: likewise.

2004-09-19  Roland Illig  <roland.illig@gmx.de>

	* direntry.c: Added const qualifier to function declarations and
	variables. Introduced local modifiable strings where necessary.
	* xdirentry.h: likewise.

2004-09-18  Roland Illig  <roland.illig@gmx.de>

	* smbfs.c (smbfs_init): Added a cast to avoid compiler warning.

2004-09-17  Pavel S. Shirshov  <pavelsh@mail.ru>

	* extfs.c (extfs_open_archive): Fixes bug in extfs, which showed
	'Inconsistent extfs archive' on small archives and diffs. 
	QNX 6.x (QNX Neutrino) specific 

	Based on patch from Dmitry Alexeyev <dmi_a@qnx.org.ru>

2004-09-06  Jakub Jelinek  <jakub@redhat.com>

        * fish.c (fish_file_store): Call got_interrupt() instead of testing
        whether got_interrupt is non-NULL (it always is).

2004-09-04  Pavel S. Shirshov  <pavelsh@mail.ru>

	* vfs.c (vfs_cmp_handle): Fix warnings on 64-bit platforms.
	(vfs_op): Likewise.
	(vfs_info): Likewise.